error.txt

> Task :compileJava
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:1: error: illegal character: '\ufeff'
﻿package com.re.rikkei_bank_manager.kyc.controller;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:1: error: class, interface, enum, or record expected
﻿package com.re.rikkei_bank_manager.kyc.controller;
         ^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:2: error: class, interface, enum, or record expected
import io.swagger.v3.oas.annotations.Operation;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:3: error: class, interface, enum, or record expected
import io.swagger.v3.oas.annotations.responses.ApiResponse;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:4: error: class, interface, enum, or record expected
import io.swagger.v3.oas.annotations.tags.Tag;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:6: error: class, interface, enum, or record expected
import com.re.rikkei_bank_manager.common.response.ApiResult;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:7: error: class, interface, enum, or record expected
import com.re.rikkei_bank_manager.kyc.dto.response.KycResponse;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:8: error: class, interface, enum, or record expected
import com.re.rikkei_bank_manager.kyc.service.KycService;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:9: error: class, interface, enum, or record expected
import lombok.RequiredArgsConstructor;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:10: error: class, interface, enum, or record expected
import org.springframework.data.domain.*;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:11: error: class, interface, enum, or record expected
import org.springframework.http.ResponseEntity;
^
D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:12: error: class, interface, enum, or record expected
import org.springframework.web.bind.annotation.*;
^
12 errors

> Task :compileJava FAILED

[Incubating] Problems report is available at: file:///D:/Documents/JAVA%20WEB%20SERVICE/PTIT_KS24_CNTT1_HOANGDINHTUNG/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava' (registered by plugin class 'org.gradle.api.plugins.JavaBasePlugin').
> Compilation failed; see the compiler output below.
  D:\Documents\JAVA WEB SERVICE\PTIT_KS24_CNTT1_HOANGDINHTUNG\src\main\java\com\re\rikkei_bank_manager\kyc\controller\StaffKycController.java:1: error: illegal character: '\ufeff'
  ﻿package com.re.rikkei_bank_manager.kyc.controller;
  ^
  12 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 7s
1 actionable task: 1 executed
